<resources>
    <string name="app_name">My Video Game List</string>
    <string name="close_button">X</string>
    <string name="abandonned_button">Abandoned</string>
    <string name="playing_button">Playing</string>
    <string name="on_hold_button">On-hold</string>
    <string name="planned_button">Planned</string>
    <string name="finished_button">Finished</string>
    <string name="placeholder_game_name">Game name</string>
    <string name="my_score">My score</string>
    <string name="status">Status</string>
    <string name="save_text_game_rating">Save</string>
    <string name="cancel">Cancel</string>
    <string name="my_time">My time</string>
    <string name="hours">Hours</string>
    <string name="empty_time">- -</string>
    <string name="minutes">Min</string>
    <string name="feedback">My feedback</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="randomatic">Randomatic</string>
    <string name="my_lists">My lists</string>
    <string name="games_lists">Games lists</string>
    <string name="empty_text"> </string>
    <string name="rating">Rating</string>
    <string name="average_playtime">Average playtime</string>
    <string name="loading">Loading</string>
    <string name="gameImage">Game image</string>
    <string name="edit_user_data">Edit my data</string>
    <string name="data_from">Games data comes from https://rawg.io/</string>
    <string name="news_from">News data comes from https://www.gamespot.com</string>
    <string name="click_to_show_desc">Show more</string>
    <string name="click_to_less_desc">Show less</string>
    <string name="error_on_fetching_data">Error on fetching data. Check your internet connection</string>
    <string name="empty_list">Wow such empty !</string>
    <string name="your_playtime">Your playtime:</string>

    <string name="loading_screen">Loading...</string>

    <string name="news_title">News title</string>
    <string name="news_date">News date</string>
    <string name="news_desc">Short description</string>
    <string name="news_publish_date">Publish date:</string>
    <string name="news_authors">Authors:</string>
    <string name="news_score">Score:</string>
    <string name="news_good_points">Good points:</string>
    <string name="news_bad_points">Bad points:</string>

    <string name="news_type">news Type</string>

    <string name="news_goods_points_bla">Good points that are so good that we can not even speak about:</string>
    <string name="news_bad_points_bla">Bad points that are so bad that we can not even speak about:</string>

    <string name="internet_error">Internet error, data could not be saved</string>

    <string name="genreAll">All</string>
    <string name="genreFinished">Finished</string>
    <string name="genrePlaying">Playing</string>
    <string name="genreOnHold">On-hold</string>
    <string name="genrePlanned">Planned</string>
    <string name="genreAbandonned">Abandoned</string>

    <string name="no_game_in_list">No game in this list</string>

    <string name="loading_news">Loading the latest news for you, please wait...</string>

    <string name="no_internet_access">Turn on network and relaunch application</string>
    <string name="no_internet_access_to_save_data">Turn on network to apply changes</string>

    <string name="api_internal_error_string">Looks like our news API is KO, we are sorry for the disturbance</string>

    <string name="emptySearch">We have\'nt found anything relevant to your search :(</string>

    <string name="searchName">Name</string>
    <string name="searchDevs">Devs</string>
    <string name="searchDevsLong">Developer</string>
    <string name="searchPublisher">Publisher</string>
    <string name="searchGenres">Genre</string>
    <string name="searchPlatforms">Platform</string>
    <string name="searchReleasedDate">Released</string>
    <string name="searchMetacritic">Metacritic</string>

    <string name="cardReleasedDate">Released:</string>
    <string name="cardMetacritic">Metacritic:</string>
    <string name="cardGenres">Genres:</string>

    <string name="searchNameEditText">Enter a game name</string>
    <string name="searchDevsEditText">Enter a developer name</string>
    <string name="searchPublisherEditText">Enter a publisher name</string>
    <string name="searchGenresEditText">Enter a Genre</string>
    <string name="searchPlatformsEditText">Enter a platform name</string>
    <string name="searchReleasedDateEditText">Date (format: 2010-01-01)</string>

    <string name="ten">10</string>
    <string name="nine">9</string>
    <string name="height">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>

    <string name="homeWelcome">Welcome back</string>
    <string name="homeLogo">MyVGL</string>
    <string name="homeSignOut">Sign out</string>
    <string name="homeTotalGames">Total games</string>
    <string name="homeFinishGames">Finished games</string>
    <string name="homeTotalPlaytime">Total playtime</string>
    <string name="homeTemplateNumber">14</string>
    <string name="homeTemplateHours">145 hours</string>
    <string name="homeNews">Latest News</string>

    <string name="firstScreenTitle1">Welcome to</string>
    <string name="firstScreenTitle2">My VideoGames List !</string>
    <string name="firstScreenTitle3">Please log in or create an account in order to use the app</string>
    <string name="firstScreenCreate">Sign in</string>
    <string name="firstScreenLogin">Log in</string>

    <string name="registerTitle">Create an account</string>
    <string name="registerButton">Sign in</string>
    <string name="registerEmailText">E-mail</string>
    <string name="registerPasswordText">Password</string>
    <string name="registerPasswordText2">Confirm password</string>
    <string name="registerNameText">Name</string>
    <string name="registerBack">Back</string>

    <string name="loginTitre">Log in to MyVGL</string>
    <string name="loginButton">Log in</string>
    <string name="loginPassword">I have lost my password...</string>
    <string name="loginBack">Back</string>

    <string name="randomaticTitle1">Feeling bored ? Don\'t know what to play ?</string>
    <string name="randomaticTitle2">Let us choose for you !</string>
    <string name="randomaticResult">Here you go !</string>
    <string name="randomaticButton1">Game I have finished</string>
    <string name="randomaticButton2">Game I have to do</string>
    <string name="randomaticButton3">Game I don\'t own</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>