<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".UserGameRating">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/toolbar_top"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_back_game_id"
            android:layout_width="38dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/toolbar_top"
            android:text="@string/close_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/text_orange_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_game_rating_game_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/placeholder_game_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_game_rating_cancel_id"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="@color/toolbar_top"
            android:text="@string/cancel"
            app:icon="@android:drawable/ic_menu_delete"
            app:iconTint="@color/text_orange_color"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_game_rating_save_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@color/toolbar_top"
            android:text="@string/save_text_game_rating"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/text_orange_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:background="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/abandonned_button_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:backgroundTint="@color/black"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/abandonned_button"
                android:textSize="12sp"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp"
                tools:ignore="TouchTargetSizeCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/finished_button_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:backgroundTint="@color/black"
                android:text="@string/finished_button"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/planned_button_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:backgroundTint="@color/black"
                android:text="@string/planned_button"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/on_hold_button_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:backgroundTint="@color/black"
                android:text="@string/on_hold_button"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />

            <Button
                android:id="@+id/playing_button_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:backgroundTint="@color/black"
                android:text="@string/playing_button"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/my_score"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/left2_button_game_rating_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:text="@string/ten"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/light_grey"
                android:textStyle="bold" />

            <Button
                android:id="@+id/left1_button_game_rating_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:text="@string/nine"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey"
                android:textStyle="bold" />

            <Button
                android:id="@+id/center_button_game_rating_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/toolbar_top"
                android:insetTop="1dp"
                android:insetBottom="1dp"
                android:text="@string/height"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:strokeColor="@color/text_orange_color"
                app:strokeWidth="5dp" />

            <Button
                android:id="@+id/right1_button_game_rating_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:text="@string/seven"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#656262"
                android:textStyle="bold" />

            <Button
                android:id="@+id/right2_button_game_rating_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:text="@string/six"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/light_grey"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/my_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <EditText
                android:id="@+id/edit_text_hours_game_rating_id"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:hint="@string/empty_time"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:background="@drawable/edittext_border"
                tools:ignore="TextContrastCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hours"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/edit_text_minutes_game_rating_id"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:hint="@string/empty_time"
                android:inputType="number"
                android:background="@drawable/edittext_border"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="TextContrastCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minutes"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/feedback_game_rating_id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edittext_bottom_border"
            android:ems="10"
            android:hint="@string/feedback"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/toolbar_top"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp">

        <Button
            android:id="@+id/home_button_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="@color/toolbar_top"
            android:text="@string/home"
            android:textSize="12dp"
            android:paddingTop="9dp"
            android:drawableTop="?attr/homeAsUpIndicator"
            android:drawableTint="#9A9696"/>

        <Button
            android:id="@+id/search_button_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="@color/toolbar_top"
            android:drawableTint="#9A9696"
            android:text="@string/search"
            android:textSize="12dp"
            android:paddingTop="9dp"
            android:drawableTop="?android:attr/actionModeWebSearchDrawable"
            app:iconTint="#B6B0B0" />

        <Button
            android:id="@+id/randomatic_button_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="@color/toolbar_top"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@string/randomatic"
            android:textSize="12dp"
            android:drawableTop="@android:drawable/ic_menu_help" />

        <Button
            android:id="@+id/my_lists_button_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="@color/toolbar_top"
            android:drawableTop="@android:drawable/ic_menu_sort_by_size"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@string/my_lists"
            android:textSize="12dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
    <!--android:typeface="serif"-->