<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/toolbar_top"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_game_rating_game_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/search"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white" />

    </LinearLayout>


    <HorizontalScrollView
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:background="@drawable/top_border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/search_all_button_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/toolbar_top"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/searchName" />

            <Button
                android:id="@+id/search_devs_button_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/toolbar_top"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:text="@string/searchDevs" />

            <Button
                android:id="@+id/search_publisher_button_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/toolbar_top"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:text="@string/searchPublisher" />

            <Button
                android:id="@+id/search_genres_button_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/toolbar_top"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:text="@string/searchGenres" />

            <Button
                android:id="@+id/search_platforms_button_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/toolbar_top"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:text="@string/searchPlatforms" />

            <Button
                android:id="@+id/search_releasedDate_button_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/toolbar_top"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:text="@string/searchReleasedDate" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/feedback_game_rating_id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edittext_bottom_border"
            android:ems="10"
            android:hint="@string/searchNameEditText"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/top_border"
        android:layout_marginBottom="0dp">

        <Button
            android:id="@+id/home_button_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="@color/toolbar_top"
            android:text="@string/home"
            android:textSize="12sp"
            android:paddingTop="9dp"
            android:drawableTop="?attr/homeAsUpIndicator"
            android:drawableTint="#9A9696"/>

        <Button
            android:id="@+id/search_button_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="@color/toolbar_top"
            android:drawableTop="?android:attr/actionModeWebSearchDrawable"
            android:drawableTint="#9A9696"
            android:paddingTop="9dp"
            android:text="@string/search"
            android:textSize="12sp"
            app:iconTint="#B6B0B0"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/randomatic_button_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="@color/toolbar_top"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@string/randomatic"
            android:textSize="12sp"
            android:drawableTop="@android:drawable/ic_menu_help" />

        <Button
            android:id="@+id/my_lists_button_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="@color/toolbar_top"
            android:drawableTop="@android:drawable/ic_menu_sort_by_size"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@string/my_lists"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>